--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,1 +1,57 @@
 /* miniprogram/pages/index/index.wxss */
+.headGg{
+  width: 100%;
+}
+.line{
+  width: 95%;
+  height: 3px;
+  background:#595656;
+  border-radius: 1px;
+  margin:0 auto;
+}
+.addressInformation{
+  width: 95%;
+  height: 30px;
+  background:#fff;
+  border-radius: 10px;
+  margin:0 auto;
+  margin-top: 10px;
+  box-shadow: 0px 5px 20px 0px rgba(190, 193, 205, 0.4);
+  padding-top:4px; 
+}
+.icon-search-1{
+  margin-left: 10px;
+  color: #425269;
+}
+.incise{
+  width: 1px;
+  height: 100%;
+  color: #7F8B99;
+  margin: 0 15px;
+  display: inline-block;
+}
+.font-style-address{
+  font-size:16px;
+  color: #808080;
+}
+.iconRight{
+  width: 38px;
+  height: 35px;
+  position: relative;
+  top: 3px;
+}
+
+.disableAfter::after{
+  display: none;
+}
+.appointmentStyle{
+  width:446rpx;
+  background:rgba(66,83,105,1);
+  box-shadow:0px 3px 14px 0px rgba(0, 0, 0, 0.13);
+  margin:10px auto;
+  line-height:1;
+  color:#fff;
+  border-radius:36rpx;
+  font-size:16px;
+  padding: 10px 0
+}
