--- a/miniprogram/pages/my/my.wxml
+++ b/miniprogram/pages/my/my.wxml
@@ -31,13 +31,13 @@
   <view class="weui-cell weui-cell_example ">
     <view class="weui-cell__hd">
     </view>
-    <view class="weui-cell__bd">
+    <view class="weui-cell__bd" bindtap="toCard">
       <text class="iconfont icon-ticket" style="margin-right:5px"></text>
       <text style="font-size:16px;color:#343434">优惠券</text>
     </view>
     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </view>
-  <view class="weui-cell weui-cell_example ">
+  <view class="weui-cell weui-cell_example " bindtap="tel">
     <view class="weui-cell__hd">
     </view>
     <view class="weui-cell__bd">
@@ -46,4 +46,12 @@
     </view>
     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </view>
+</view>
+<view style="width:90px;height:30px;border-radius:15px;background:#fff;font-weight:bold;position:fixed;right:5px;bottom:110px;font-weight:bold;text-align:right;padding-right:15px;line-height:30px;font-size:16px;" bindtap="toast">
+  <view style="width:40px;height:40px;border-radius:50%;background:#F7B941;position:absolute;left:-5px;top:-5px;text-align:center;line-height:40px;"><text class="iconfont icon-sticker-2" style="margin:0 auto;font-size:22px;color:#fff;"></text></view>
+  续单
+</view>
+<view style="width:90px;height:30px;border-radius:15px;background:#fff;font-weight:bold;position:fixed;right:5px;bottom:60px;font-weight:bold;text-align:right;padding-right:15px;line-height:30px"  bindtap="toast">
+  <view style="width:40px;height:40px;border-radius:50%;background:#71ABF5;position:absolute;left:-5px;top:-5px;text-align:center;line-height:40px;"><text class="iconfont icon-sticker-2" style="margin:0 auto;font-size:22px;color:#fff;"></text></view>
+  开门码
 </view>
