--- a/miniprogram/pages/orderList/orderList.wxml
+++ b/miniprogram/pages/orderList/orderList.wxml
@@ -10,15 +10,92 @@
       </view>
       <view class="weui-tab__panel">
         <view class="weui-tab__content" hidden="{{activeIndex != 0}}" data-type="0">
+          <block wx:for="{{orderList}}" wx:key="*this" wx:for-index="index">
           <view class="weui-cells weui-cells_after-title" style="margin-top:10px;">
-            
+              <view class="weui-cells weui-cells_after-title" style="margin-top:10px;">
+                <view class="weui-cell">
+                  <view class="weui-cell__hd" style="position: relative;margin-right: 10px;">
+                  </view>
+                  <view class="weui-cell__bd">
+                    <view style="font-size: 13px;color: #808080;">订单：{{item.orderNumber}}</view>
+                  </view>
+                  <view class="weui-cell__ft">
+                    <view style="font-size: 13px;color: #546377;positon:absolute:top:0">未付款</view>
+                  </view>
+                </view>
+                <view class="weui-cell">
+                  <view class="weui-cell__hd" style="position: relative;margin-right: 10px;">
+                  </view>
+                  <view class="weui-cell__bd">
+
+                    <view style="font-size: 15px;">中央第五街（NO.001）</view>
+                    <view style="font-size: 13px;color: #546377">{{item.name}} 共1件商品</view>
+                    <view style="font-size: 16px;color: #3D3D3D;">￥{{item.price}}</view>
+                  </view>
+                  <view class="weui-cell__ft">
+                    <view style="font-size: 13px;color: #546377;positon:absolute:top:0">{{item.creadTime}}</view>
+                    <view>
+                      <button style="background:#425369;line-height:1.5;font-size:14px;color:#fff" bindtap="topay" data-index="{{index}}">未支付</button>
+                    </view>
+                  </view>
+                </view>
+              </view>
           </view>
+          </block>
         </view>
         <view class="weui-tab__content" hidden="{{activeIndex != 1}}" data-type="1">
+          <view class="weui-cells weui-cells_after-title" style="margin-top:10px;">
+            <block wx:for="{{orderList}}" wx:key="*this" wx:for-index="index">
+          <view class="weui-cells weui-cells_after-title" style="margin-top:10px;">
+              <view class="weui-cells weui-cells_after-title" style="margin-top:10px;">
+                <view class="weui-cell">
+                  <view class="weui-cell__hd" style="position: relative;margin-right: 10px;">
+                  </view>
+                  <view class="weui-cell__bd">
+                    <view style="font-size: 13px;color: #808080;">订单：{{item.orderNumber}}</view>
+                  </view>
+                  <view class="weui-cell__ft">
+                    <view style="font-size: 13px;color: #546377;positon:absolute:top:0">未付款</view>
+                  </view>
+                </view>
+                <view class="weui-cell">
+                  <view class="weui-cell__hd" style="position: relative;margin-right: 10px;">
+                  </view>
+                  <view class="weui-cell__bd">
+
+                    <view style="font-size: 15px;">中央第五街（NO.001）</view>
+                    <view style="font-size: 13px;color: #546377">{{item.name}} 共1件商品</view>
+                    <view style="font-size: 16px;color: #3D3D3D;">￥{{item.price}}</view>
+                  </view>
+                  <view class="weui-cell__ft">
+                    <view style="font-size: 13px;color: #546377;positon:absolute:top:0">{{item.creadTime}}</view>
+                    <view>
+                      <button style="background:#425369;line-height:1.5;font-size:14px;color:#fff" bindtap="topay" data-index="{{index}}">未支付</button>
+                    </view>
+                  </view>
+                </view>
+              </view>
+          </view>
+          </block>
+          </view>
+        </view>
+        <view class="weui-tab__content" hidden="{{activeIndex != 2}}" data-type="2">
           <view class="weui-cells weui-cells_after-title" style="margin-top:10px;">
           </view>
         </view>
       </view>
     </view>
   </view>
+</view>
+<view style="width:90px;height:30px;border-radius:15px;background:#fff;font-weight:bold;position:fixed;right:5px;bottom:110px;font-weight:bold;text-align:right;padding-right:15px;line-height:30px;font-size:16px;" bindtap="toast">
+  <view style="width:40px;height:40px;border-radius:50%;background:#F7B941;position:absolute;left:-5px;top:-5px;text-align:center;line-height:40px;">
+    <text class="iconfont icon-sticker-2" style="margin:0 auto;font-size:22px;color:#fff;"></text>
+  </view>
+  续单
+</view>
+<view style="width:90px;height:30px;border-radius:15px;background:#fff;font-weight:bold;position:fixed;right:5px;bottom:60px;font-weight:bold;text-align:right;padding-right:15px;line-height:30px" bindtap="toast">
+  <view style="width:40px;height:40px;border-radius:50%;background:#71ABF5;position:absolute;left:-5px;top:-5px;text-align:center;line-height:40px;">
+    <text class="iconfont icon-sticker-2" style="margin:0 auto;font-size:22px;color:#fff;"></text>
+  </view>
+  开门码
 </view>
