--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <view>
-  <image src="https://team.applinzi.com/images/index-1.png" class="headGg"></image>
+  <image src="https://www.teamcs.cn/images/index-1.png" class="headGg"></image>
 </view>
 <view class="line"></view>
 <view class="addressInformation">
