--- a/miniprogram/pages/splash/splash.wxss
+++ b/miniprogram/pages/splash/splash.wxss
@@ -1,10 +1,10 @@
 .logoHeader{
   position: fixed;
-  top: 0;
+  top: 30%;
 	left: 50%;
 	transform: translate(-50%, 0);
 	-webkit-transform: translate(-50%, 0);
-  height: 300rpx;
+  height: 220rpx;
 
 }
 .logoTea{
