--- a/miniprogram/pages/recharge/recharge.wxml
+++ b/miniprogram/pages/recharge/recharge.wxml
@@ -1,4 +1,4 @@
 <image src="https://www.teamcs.cn/images/1569827276.png" style="width:90%;height:220rpx;margin:20px auto"></image>
 <image src="https://www.teamcs.cn/images/voucher-1.png" style="width:90%;height:220rpx;margin:20px auto"></image>\
-<view style="background:#546377;border:1px solid rgba(84,99,119,1);box-shadow:0px 3px 14px 0px rgba(0, 0, 0, 0.13);width:80%;border-radius:15px;position:fixed;overflow:hidden;margin-bottom:20px;bottom:20px;left: 50%;transform: translate(-50%, 0);-webkit-transform: translate(-50%, 0);color:#fff;text-align:center" bindtap="toPay"><text style="margin-left:10px">立即充值</text>
+<view style="background:#546377;border:1px solid rgba(84,99,119,1);box-shadow:0px 3px 14px 0px rgba(0, 0, 0, 0.13);width:100%;border-radius:15px;position:fixed;overflow:hidden;margin-bottom:20px;bottom:20px;left: 50%;transform: translate(-50%, 0);-webkit-transform: translate(-50%, 0);color:#fff;text-align:center;height: 40px;line-height: 40px;" bindtap="toPay"><text style="margin-left:10px">立即充值</text>
   </view>
