--- a/miniprogram/pages/appointment/appointment.wxml
+++ b/miniprogram/pages/appointment/appointment.wxml
@@ -6,15 +6,28 @@
     <view class="incise">|</view>
     <text class="font-style-address"> 中央第五街</text>
   </view>
-  <image src="https://www.teamcs.cn/images/bg-2.png" style="width:100%;height:350rpx;margin:10px 0"></image>
-  <view class="weui-cell" bindtap="todetail" data-room="1">
+   <swiper class="home-swiper" indicator-dots="true" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
+    <swiper-item>
+      <image src="https://www.teamcs.cn/images/appointment-2.png" class="slide-image" />
+    </swiper-item>
+    <swiper-item>
+      <image src="https://www.teamcs.cn/images/appointment-3.png" class="slide-image" />
+    </swiper-item>
+    <swiper-item>
+      <image src="https://www.teamcs.cn/images/appointment-4.png" class="slide-image" />
+    </swiper-item>
+    <swiper-item>
+      <image src="https://www.teamcs.cn/images/appointment-5.png" class="slide-image" />
+    </swiper-item>
+  </swiper>
+  <view class="weui-cell" bindtap="todetail" data-room="0">
     <view class="weui-cell__hd" style="position: relative;margin-right: 10px;">
-      <image src="https://www.teamcs.cn/images/tearoom-2.png" style="width: 50px; height: 50px; display: block" />
+      <image src="https://www.teamcs.cn/images/tearoom-1.png" style="width: 50px; height: 50px; display: block" />
       <!-- <view class="weui-badge" style="position: absolute;top: -.4em;right: -.4em;">8</view> -->
     </view>
     <view class="weui-cell__bd">
       <view>使命感</view>
-      <view style="font-size: 13px;color: #343434;">
+      <!-- <view style="font-size: 13px;color: #343434;">
         服务
         <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
         <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
@@ -27,21 +40,48 @@
         <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
         <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
         <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
-      </view>
+      </view> -->
       <view style="font-size: 13px;color: #343434">
         ￥68.00/小时
         <text style="margin-left:40px;">推荐1-4人</text>
       </view>
     </view>
   </view>
-  <view class="weui-cell"  bindtap="todetail"  data-room="2">
+  <view class="weui-cell"  bindtap="todetail"  data-room="1">
+    <view class="weui-cell__hd" style="position: relative;margin-right: 10px;">
+      <image src="https://www.teamcs.cn/images/tearoom-2.png" style="width: 50px; height: 50px; display: block" />
+      <!-- <view class="weui-badge" style="position: absolute;top: -.4em;right: -.4em;">8</view> -->
+    </view>
+    <view class="weui-cell__bd">
+      <view>价值观</view>
+      <!-- <view style="font-size: 13px;color: #343434;">
+        服务
+        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
+        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
+        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
+        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
+        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
+        价格
+        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
+        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
+        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
+        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
+        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
+      </view> -->
+      <view style="font-size: 13px;color: #343434">
+        ￥68.00/小时
+        <text style="margin-left:40px;">推荐1-6人</text>
+      </view>
+    </view>
+  </view>
+  <view class="weui-cell"  bindtap="todetail" data-room="2">
     <view class="weui-cell__hd" style="position: relative;margin-right: 10px;">
       <image src="https://www.teamcs.cn/images/tearoom-3.png" style="width: 50px; height: 50px; display: block" />
       <!-- <view class="weui-badge" style="position: absolute;top: -.4em;right: -.4em;">8</view> -->
     </view>
     <view class="weui-cell__bd">
-      <view>价值观</view>
-      <view style="font-size: 13px;color: #343434;">
+      <view>责任心</view>
+      <!-- <view style="font-size: 13px;color: #343434;">
         服务
         <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
         <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
@@ -54,48 +94,21 @@
         <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
         <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
         <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
-      </view>
+      </view> -->
       <view style="font-size: 13px;color: #343434">
         ￥68.00/小时
         <text style="margin-left:40px;">推荐1-6人</text>
       </view>
     </view>
   </view>
-  <view class="weui-cell"  bindtap="todetail" data-room="3">
+   <view class="weui-cell"  bindtap="todetail"  data-room="3">
     <view class="weui-cell__hd" style="position: relative;margin-right: 10px;">
       <image src="https://www.teamcs.cn/images/tearoom-4.png" style="width: 50px; height: 50px; display: block" />
       <!-- <view class="weui-badge" style="position: absolute;top: -.4em;right: -.4em;">8</view> -->
     </view>
     <view class="weui-cell__bd">
-      <view>责任心</view>
-      <view style="font-size: 13px;color: #343434;">
-        服务
-        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
-        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
-        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
-        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
-        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
-        价格
-        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
-        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
-        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
-        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
-        <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
-      </view>
-      <view style="font-size: 13px;color: #343434">
-        ￥68.00/小时
-        <text style="margin-left:40px;">推荐1-6人</text>
-      </view>
-    </view>
-  </view>
-   <view class="weui-cell"  bindtap="todetail"  data-room="0">
-    <view class="weui-cell__hd" style="position: relative;margin-right: 10px;">
-      <image src="https://www.teamcs.cn/images/tearoom-1.png" style="width: 50px; height: 50px; display: block" />
-      <!-- <view class="weui-badge" style="position: absolute;top: -.4em;right: -.4em;">8</view> -->
-    </view>
-    <view class="weui-cell__bd">
       <view>凝聚力</view>
-      <view style="font-size: 13px;color: #343434;">
+      <!-- <view style="font-size: 13px;color: #343434;">
         服务
         <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
         <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
@@ -108,7 +121,7 @@
         <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
         <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
         <image src="../../images/pingfen.png" style="width:12px;height:12px"></image>
-      </view>
+      </view> -->
       <view style="font-size: 13px;color: #343434">
         ￥68.00/小时
         <text style="margin-left:40px;">推荐1-6人</text>
