--- a/miniprogram/pages/appointment/appointment.wxss
+++ b/miniprogram/pages/appointment/appointment.wxss
@@ -24,3 +24,12 @@
   font-size:16px;
   color: #808080;
 }
+.home-swiper {
+  width: 95%;
+  height: 360rpx;
+  margin: 10px;
+}
+.slide-image {
+  width: 100%;
+  height: 100%;
+}
