--- a/miniprogram/pages/detail/detail.wxml
+++ b/miniprogram/pages/detail/detail.wxml
@@ -1,18 +1,7 @@
 <!--miniprogram/pages/detail/detail.wxml-->
 
 <view class="container">
-  <!--轮播图-->
-  <swiper class="home-swiper" indicator-dots="true" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
-    <swiper-item>
-      <image src="https://www.teamcs.cn/images/appointment-2.png" class="slide-image" />
-    </swiper-item>
-    <swiper-item>
-      <image src="https://www.teamcs.cn/images/appointment-3.png" class="slide-image" />
-    </swiper-item>
-    <swiper-item>
-      <image src="https://www.teamcs.cn/images/appointment-4.png" class="slide-image" />
-    </swiper-item>
-  </swiper>
+  <image src="{{imageSrc}}" style="width:100%;height:350px;margin:22px"></image>
   <text style="margin-top:15px;">{{name}}</text>
   <view class="line-qiege"></view>
   <text style="margin:10px 0"><text class="iconfont icon-clock-1 icon-right" style="margin-right:5px"></text>选择预定时间</text>
