--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,6 +1,7 @@
 /* miniprogram/pages/index/index.wxss */
 .headGg{
   width: 100%;
+  height: 360rpx
 }
 .line{
   width: 95%;
@@ -8,6 +9,7 @@
   background:#595656;
   border-radius: 1px;
   margin:0 auto;
+  margin-top: 10px;
 }
 .addressInformation{
   width: 95%;
@@ -54,4 +56,13 @@
   border-radius:36rpx;
   font-size:16px;
   padding: 10px 0
+}
+.home-swiper {
+  width: 100%;
+  height: 375px;
+  margin-right: 5px;
+}
+.slide-image {
+  width: 100%;
+  height: 100%;
 }
