--- a/miniprogram/pages/detail/detail.wxml
+++ b/miniprogram/pages/detail/detail.wxml
@@ -1,8 +1,8 @@
 <!--miniprogram/pages/detail/detail.wxml-->
 
 <view class="container">
-  <image src="{{imageSrc}}" style="width:100%;height:350rpx;margin:22px"></image>
-  <text style="margin-top:15px;">{{name}}</text>
+  <image src="{{imageSrc}}" style="width:100%;height:240px;margin:5px"></image>
+  <text style="margin-top:5px;">{{name}}</text>
   <view class="line-qiege"></view>
   <text style="margin:10px 0"><text class="iconfont icon-clock-1 icon-right" style="margin-right:5px"></text>选择预定时间</text>
   <text style="color:#425369;"><text class="timeBox">{{startTime}}</text>至<text class="timeBox">{{endTime}}</text>
@@ -18,12 +18,12 @@
     </picker>
   </view>
 
-  <view class="line-qiege"></view>
+  <!-- <view class="line-qiege"></view>
   <view class="addressInformation">
     <text class="iconfont icon-pin-"></text>
     <view class="incise">|</view>
     <text class="font-style-address"> 中央第五街</text>
-  </view>
+  </view> -->
   <view class="line-qiege"></view>
   <text style="margin:15px;">使用说明</text>
   <text style="text-align:center">
