--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -66,3 +66,37 @@
   width: 100%;
   height: 100%;
 }
+.flex-icon{
+  width:40px;
+  height:40px;
+  border-radius:50%;
+  position:absolute;
+  left:-5px;
+  top:-5px;
+  text-align:center;
+  line-height:40px;
+}
+.flex-button-view{
+  width:40px;
+  height:40px;
+  border-radius:50%;
+  position:absolute;
+  left:-5px;
+  top:-5px;
+  text-align:center;
+  line-height:40px;
+}
+.flex-button{
+  width:90px;
+  height:30px;
+  border-radius:15px;
+  background:#fff;
+  position:fixed;
+  right:5px;
+  bottom:70px;
+  font-weight:bold;
+  text-align:right;
+  padding-right:15px;
+  line-height:30px;
+  font-size:16px;
+}
