--- a/miniprogram/pages/myInfo/myInfo.wxml
+++ b/miniprogram/pages/myInfo/myInfo.wxml
@@ -17,7 +17,7 @@
     <view class="weui-cell__hd">
     </view>
     <view class="weui-cell__bd">性别</view>
-    <view class="weui-cell__ft">男</view>
+    <view class="weui-cell__ft">{{sex}}</view>
   </view>
   <view class="weui-cell weui-cell_example ">
     <view class="weui-cell__hd">
